<resources>
    <string name="app_name">LearningWithFriends</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_numbers_game">NumbersGame</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_family_members_game">FamilyMembersGame</string>
    <string name="userNameTextBox">Name</string>
    <string name="passwordTextBox">Password</string>
    <string name="signup_button">Signup</string>
    <string name="login_button">Login</string>
    <string name="ages_2_3_button">Ages 2-3</string>
    <string name="ages_4_5_button">Ages 4-5</string>
    <string name="shapes_game_button">Shapes</string>
    <string name="numbers_game_button">Numbers 123</string>
    <string name="letters_game_button">Letters ABC</string>
    <string name="colors_game_button">Colors</string>
    <string name="family_members_game_button">Family Members</string>
    <string name="body_parts_game_button">Body Parts</string>
</resources>