<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ChooseGames23">

    <Button
        android:id="@+id/letters_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/letters_game_button" />

    <Button
        android:id="@+id/numbers_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/numbers_game_button" />

    <Button
        android:id="@+id/colors_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/colors_game_button" />

</LinearLayout>