<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ChooseGames45">


    <Button
        android:id="@+id/shapes_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shapes_game_button" />

    <Button
        android:id="@+id/family_members_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family_members_game_button" />

    <Button
        android:id="@+id/body_parts_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body_parts_game_button" />

</LinearLayout>